CRUD de usuarios

--- a/Back/.env
+++ b/Back/.env
@@ -1,5 +1,6 @@
 USER = root
 PASS = V4l3nt1n4$
-SECRET = t7inlhehvewupro0s
-PORT = 6000
+SECRET=t7inlhehvewupro0s
+PORT = 8000
 DB_NAME = Data_warehouse
+HOST = 127.0.0.1
